@@ -30,6 +30,10 @@ endif(MINIMAL_BUILD)
 foreach(tool ${tools})
   add_executable(${tool} ${tool}.cpp)
   target_link_libraries(${tool} ${BABEL_LIBRARY})
+  if(MSVC)
+    set_target_properties(${tool} PROPERTIES
+	    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+  endif(MSVC)
   install(TARGETS ${tool}
                   RUNTIME DESTINATION bin
                   LIBRARY DESTINATION lib
